--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,9 +15,11 @@
     <string name="menu_suggestion">Sugerencias</string>
     <string name="menu_complaints">Denuncias</string>
     <string name="menu_contact_us">Horarios Atención y Contactos</string>
+    <string name="menu_parking">Parqueadero Información</string>
+    <string name="menu_admin_pay">Formas de Pago Administración</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    
+
     <string name="unitName">Torres de San Sebastian</string>
     <string name="neighborhood">Barrio Colon</string>
     <string name="city">Medellín - Antioquia</string>
@@ -49,4 +51,28 @@
     <string name="friday">Viernes</string>
     <string name="saturday">Sabado</string>
     <string name="hour">Hora</string>
+    <string name="schedule">Horario</string>
+    <string name="parking">Parqueadero</string>
+    <string name="schedule_parking">Lunes a Domingo de 7 A.M. a 10 P.M. </string>
+    <string name="time">Tiempo</string>
+    <string name="time_use_parking">2 horas Máximo</string>
+    <string name="number_parking_moto">25</string>
+    <string name="number_parking_car">20</string>
+    <string name="count_parking_moto"># Motos</string>
+    <string name="count_parking_car"># Carros</string>
+    <string name="note">Nota</string>
+    <string name="parking_information">Antes de cumplir las 2 horas se deberá retirar el vehículo del parqueadero, para volver a ingresar deben haber pasado 2 horas o más para poder utilizar de nuevo el servicio.\n\n Después de las 10 P.M. no debe permanecer ningún vehículo en el parqueadero.\n\n El tiempo es para visitantes, inquilinos y propietarios sin ningún tipo de exclusion.\n\nEste tiempo aplica para carros como motos.\n\n Recuerde cumplir con los limites de velocidad en la unidad, recuerde que hay niños en la zona. \n\nSi incumple el tiempo estimado de permanencia será multado.</string>
+    <string name="count_ambulance">Ambulancia</string>
+    <string name="num_ambulance">1</string>
+    <string name="administration_pay">Forma de Pago de Administración</string>
+    <string name="dataphone_pay">Pago por Datafono</string>
+    <string name="webpage_pay">Pago por Plataforma de Pagos</string>
+    <string name="account_number">Número de cuenta</string>
+    <string name="service_code">Código del Servicio</string>
+    <string name="text_link_page">Haz click aquí</string>
+    <string name="link_page">https://www.pagosvirtualesavvillas.com.co/personal/pagos/</string>
+    <string name="num_service_code">12345</string>
+    <string name="num_account_number">514 158 047</string>
+    <string name="speed_parking">Velocidad vehiculos en Parqueadero</string>
+    <string name="number_speed_parking">10 km/h</string>
 </resources>
