--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,119 @@
     </string>
     <string name="normativity">Normatividad</string>
     <string name="inform_us">Informanos</string>
+    <string name="pets_UR_manual">
+        Si tenemos mascotas, es importante que éstas no molesten a los vecinos. Recordemos
+algunas normas con respecto a la tenencia de estas:\n\n
+a) No deje a su mascota sola en el apartamento, puede ocasionar ruidos molestos e
+incómodos.\n
+b) Se debe controlar los ruidos exagerados que alteren la tranquilidad de sus vecinos.\n
+c) Queda prohibido la tenencia de especies exóticas o en vía de extinción.\n
+d) Los perros deberán llevar correa y no podrán deambular sueltos por las zonas
+comunes, zonas verdes.\n
+e) El manejo de los excrementos de su mascota es tarea suya. Por favor recójala de
+inmediato y limpie el piso con agua y jabón para evitar malos olores y la
+desagradable apariencia que dejan estos residuos. Se recomienda que los perros
+tengan un espacio destinado para este fin en el apartamento donde viven.\n
+f) Si una mascota ataca a una persona, el propietario será plenamente responsable y
+asumirá todas las consecuencias que se deriven de ello, como gastos médicos,
+clínicos, quirúrgicos, etc.\n
+g) Solamente se pueden sacar del apartamento para retirarlas de la Unidad,
+cargadas si son mascotas de razas pequeñas o con cadena, lazo y
+preferiblemente con bozal para las razas grandes, y no para circular con ellas por
+las zonas comunes.\n
+h) Está prohibido tener mascotas de razas consideradas peligrosas o de ataque, que
+puedan atentar contra la integridad física de los habitantes de la Unidad.\n
+i) Está prohibido el entrenamiento de mascotas en las zonas comunes de la Unidad.\n\n
+Cualquier infracción a estas normas se sancionará de acuerdo al Reglamento de la
+copropiedad, en su Capitulo XVIII (De las Sanciones Por Incumplimiento De Obligaciones
+No Pecuniarias).</string>
+    <string name="title_garbage">Reglamento Disposición de la Basura</string>
+    <string name="info_manage_gargage">Apoyar campañas ecológicas y programas de manejo adecuado de desechos es el mejor
+regalo que podemos dar a nuestros hijos para que disfruten de un mundo más limpio.\n\n
+Las basuras deben arrojarse por el shut ubicado al lado de los ascensores, teniendo en
+cuenta estas recomendaciones de separación, de la basura orgánica y la reciclable\n
+a) Toda la basura orgánica: pañales, restos de comida, cáscaras, servilletas, papel
+higiénico; debe ir empacada en bolsas debidamente selladas o amarradas y en el
+tamaño adecuado que no causen daño al ducto\n
+b) No se deben arrojar por el shut colillas, brasas ni fósforos encendidos, desechos
+líquidos o inflamables (ni siquiera en bolsas), de este modo evitamos incendios.\n
+c) Los desechos reciclables, como: frascos, cajas, empaques, cajas de pizza,
+cartones, botellas de gaseosa, etc. deben dejarse al lado de este en la noche o en
+la mañana antes de las siete (7 a.m.). Recuerde lavar los envases de vidrio y
+plástico antes de colocarlos junto al shut, para evitar proliferación de plagas y la
+generación de malos olores.\n
+d) En ningún caso deben arrojarse basuras, colillas o cualquier otro tipo de objetos
+por las ventanas y balcones a las zonas comunes, terrazas o bienes de los demás
+copropietarios o residentes, ni escurrir traperos o regar plantas desde los balcones
+o ventanas. Se debe informar de aquellos casos en que se observe esta conducta
+para tomar las acciones correctivas necesarias.\n
+e) Los escombros provenientes de reformas locativas de los bienes privados son
+responsabilidad de cada propietario y a él corresponde su manejo y no podrán
+utilizar zonas comunes y pasillos para almacenar estos escombros, ni depositarlos
+por el shut. Los copropietarios que realicen reformas deben realizar el aseo tantas
+veces como sea necesario a las zonas comunes que sean afectadas.\n
+f) Los cuartos del Shut están ubicados al lado de los ascensores en los siguientes
+pisos:\n
+g) Torre 7 a 10: piso 2, 5, 8, 11, 14, 17, 20.\n
+h) Torre 2 a 5: piso 3, 6, 9, 12, 15, 18, 21.\n
+i) Torre 1 y 6: Descansos de los pisos 3, 5, 7, 9, 11, 13, 15, 17, 19.\n
+j) Las escobas, traperas, cajas de cartón, palos de madera, envases de vidrio, se
+deben dejar en el Shut para ser recogido por el personal de Oficios Varios.\n
+k) Los pañales desechables de niño o adulto, los preservativos, toallas sanitarias, no
+se deben arrojar por las ventanas sino que se empacan bien y se botan con los
+desechos orgánicos. Tampoco se pueden depositar en el baño, esto contribuye al
+taponamiento de las cajas de aguas negras.\n
+l) Por ningún motivo se debe dejar basura en los corredores, escalas, ascensores,
+etc. Este no es el lugar destinados para las basuras.\n
+m) El mal uso de este servicio genera daños en los ductos que conllevan costos de
+reparación elevados.\n
+n) En las zonas comunes existen canecas para las basuras menores, con el fin de
+mantener limpia la unidad. Demos a estas el uso adecuado.\n\n\n\n\n\n\n\n\n\n</string>
+    <string name="title_playground">Reglamento de la Zona de Juegos</string>
+    <string name="info_playground">Los padres deben orientar a los niños del adecuado uso del parque infantil y son
+responsables por los daños que sus respectivos hijos causen en él.\n\n
+        a) La compañía de un adulto responsable es necesaria para la seguridad  de los niños en el parque. Por favor no los deje solo.\n
+        b) Evite que los niños griten y corran por los pasillos y escaleras perturbando la
+tranquilidad de los habitantes.\n
+c) Los padres deberán responder hasta por el más leve de los daños cometidos por
+sus hijos.\n
+d) El personal de seguridad, y de oficios varios no se pueden hacer cargo de los
+niños, la seguridad de estos es responsabilidad única y exclusiva de los padres.\n
+e) Los niños no pueden montar en bicicleta, patines, patinetas, etc. En los andenes y
+rampas peatonales.\n
+f) No permita que sus hijos jueguen en los ascensores y corredores de los pisos.\n\n\n</string>
+    <string name="title_local_repair">Reparaciones Locativas</string>
+    <string name="info_local_repair">
+        En caso de remodelación del apartamento el propietario deb:.\n\n
+1. Si al iniciar trabajos de remodelación o adecuación en los apartamentos el ruido afecta
+directamente a los vecinos residentes, en especial, a los bebés, adultos mayores o
+personas que se encuentren en estado de enfermedad o recuperación, se deberá llegar
+a un acuerdo que beneficie a las partes disminuyendo el ruido con horarios flexibles y
+además se deberán cumplir las siguientes normas:\n
+El horario establecido para el ingreso y salida de obreros y contratistas es de 8:00 a.m. a
+5:00 p.m. de lunes a viernes, y de 8 a.m. a 12:30 p.m. los sábados. No se permite
+realizar trabajos en días festivos y días domingo.\n
+2. Es deber y responsabilidad de cada propietario observar que el contratista, mantenga
+aseadas las áreas aledañas al apartamento que se reforma, los hall de acceso y demás
+áreas comunes afectadas por las obras.\n
+3. Los desperdicios, residuos y basuras que resulten de la obra, deberán ser evacuados
+oportunamente del apartamento por el contratista o responsable de la obra, bajo
+exigencia del propietario contratante sin afectar estructuras privadas o comunes,
+desagües, canaletas, en caso de afectación deberá asumir el monto total por los daños y
+perjuicios ocasionados.\n
+4. Notificación de Riesgo de Daños: Es obligación de los copropietarios comunicar de
+inmediato a la Administración y/o guardas de vigilancia sobre los riesgos existentes, con
+el objeto de prevenir posibles daños de cualquier elemento o área de uso común, tales
+como tuberías, tanques, puertas, y demás zonas comunes.\n\n
+Los vigilantes deberán informar de manera inmediata a la Administración el
+ingreso de materiales de construcción y contratistas o maestros de obra. La Administración
+deberá hacer la visita al inmueble para informarse de la obra, y que ésta cumpla con los
+permisos respectivos.
+    </string>
+    <string name="title_noise">Normas Ruido en la Unidad Residencial</string>
+    <string name="info_noise">
+        Las reuniones en los apartamentos después de las 10pm, cualquier sonido debe ser solo audible al interior del inmueble, para no perturbar la tanquilidad de los vecinos.\n
+        Esta expresamente prohibido consumir, almacenar o distribuir productos alucinógenos dentro de los apartamentos, cuyo humo y olor afecte a los transeúntes del área comunes o a otros residentes.\n
+        Se debe evitar hacer ruido sobre los pisos con acciones como el taconeo, saltos, descargas o deslizamientos de objetos, recordando que "el piso de mi apartamento, es el techo de mi vecino". Asi mismo, se debe evitar los escandalos, gritos, televisores o radios en alto volumen, especialmente en la madrugada o altas horas de la noche.
+    </string>
 </resources>
