--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,42 +129,42 @@ No Pecuniarias).</string>
     <string name="info_manage_gargage">Apoyar campañas ecológicas y programas de manejo adecuado de desechos es el mejor
 regalo que podemos dar a nuestros hijos para que disfruten de un mundo más limpio.\n\n
 Las basuras deben arrojarse por el shut ubicado al lado de los ascensores, teniendo en
-cuenta estas recomendaciones de separación, de la basura orgánica y la reciclable\n
+cuenta estas recomendaciones de separación, de la basura orgánica y la reciclable\n\n
 a) Toda la basura orgánica: pañales, restos de comida, cáscaras, servilletas, papel
 higiénico; debe ir empacada en bolsas debidamente selladas o amarradas y en el
-tamaño adecuado que no causen daño al ducto\n
+tamaño adecuado que no causen daño al ducto\n\n
 b) No se deben arrojar por el shut colillas, brasas ni fósforos encendidos, desechos
-líquidos o inflamables (ni siquiera en bolsas), de este modo evitamos incendios.\n
+líquidos o inflamables (ni siquiera en bolsas), de este modo evitamos incendios.\n\n
 c) Los desechos reciclables, como: frascos, cajas, empaques, cajas de pizza,
 cartones, botellas de gaseosa, etc. deben dejarse al lado de este en la noche o en
 la mañana antes de las siete (7 a.m.). Recuerde lavar los envases de vidrio y
 plástico antes de colocarlos junto al shut, para evitar proliferación de plagas y la
-generación de malos olores.\n
+generación de malos olores.\n\n
 d) En ningún caso deben arrojarse basuras, colillas o cualquier otro tipo de objetos
 por las ventanas y balcones a las zonas comunes, terrazas o bienes de los demás
 copropietarios o residentes, ni escurrir traperos o regar plantas desde los balcones
-o ventanas. Se debe informar de aquellos casos en que se observe esta conducta
-para tomar las acciones correctivas necesarias.\n
+o ventanas.\n Se debe informar de aquellos casos en que se observe esta conducta
+para tomar las acciones correctivas necesarias.\n\n
 e) Los escombros provenientes de reformas locativas de los bienes privados son
 responsabilidad de cada propietario y a él corresponde su manejo y no podrán
 utilizar zonas comunes y pasillos para almacenar estos escombros, ni depositarlos
-por el shut. Los copropietarios que realicen reformas deben realizar el aseo tantas
-veces como sea necesario a las zonas comunes que sean afectadas.\n
+por el shut. \nLos copropietarios que realicen reformas deben realizar el aseo tantas
+veces como sea necesario a las zonas comunes que sean afectadas.\n\n
 f) Los cuartos del Shut están ubicados al lado de los ascensores en los siguientes
-pisos:\n
-g) Torre 7 a 10: piso 2, 5, 8, 11, 14, 17, 20.\n
-h) Torre 2 a 5: piso 3, 6, 9, 12, 15, 18, 21.\n
-i) Torre 1 y 6: Descansos de los pisos 3, 5, 7, 9, 11, 13, 15, 17, 19.\n
+pisos:\n\n
+g) Torre 7 a 10: piso 2, 5, 8, 11, 14, 17, 20.\n\n
+h) Torre 2 a 5: piso 3, 6, 9, 12, 15, 18, 21.\n\n
+i) Torre 1 y 6: Descansos de los pisos 3, 5, 7, 9, 11, 13, 15, 17, 19.\n\n
 j) Las escobas, traperas, cajas de cartón, palos de madera, envases de vidrio, se
-deben dejar en el Shut para ser recogido por el personal de Oficios Varios.\n
+deben dejar en el Shut para ser recogido por el personal de Oficios Varios.\n\n
 k) Los pañales desechables de niño o adulto, los preservativos, toallas sanitarias, no
 se deben arrojar por las ventanas sino que se empacan bien y se botan con los
 desechos orgánicos. Tampoco se pueden depositar en el baño, esto contribuye al
-taponamiento de las cajas de aguas negras.\n
+taponamiento de las cajas de aguas negras.\n\n
 l) Por ningún motivo se debe dejar basura en los corredores, escalas, ascensores,
-etc. Este no es el lugar destinados para las basuras.\n
+etc. Este no es el lugar destinados para las basuras.\n\n
 m) El mal uso de este servicio genera daños en los ductos que conllevan costos de
-reparación elevados.\n
+reparación elevados.\n\n
 n) En las zonas comunes existen canecas para las basuras menores, con el fin de
 mantener limpia la unidad. Demos a estas el uso adecuado.\n\n\n\n\n\n\n\n\n\n</string>
     <string name="title_playground">Reglamento de la Zona de Juegos</string>
@@ -210,15 +210,15 @@ permisos respectivos.
     </string>
     <string name="title_noise">Normas Ruido en la Unidad Residencial</string>
     <string name="info_noise">
-        Las reuniones en los apartamentos después de las 10pm, cualquier sonido debe ser solo audible al interior del inmueble, para no perturbar la tanquilidad de los vecinos.\n
-        Esta expresamente prohibido consumir, almacenar o distribuir productos alucinógenos dentro de los apartamentos, cuyo humo y olor afecte a los transeúntes del área comunes o a otros residentes.\n
+        Las reuniones en los apartamentos después de las 10pm, cualquier sonido debe ser solo audible al interior del inmueble, para no perturbar la tanquilidad de los vecinos.\n\n
+        Esta expresamente prohibido consumir, almacenar o distribuir productos alucinógenos dentro de los apartamentos, cuyo humo y olor afecte a los transeúntes del área comunes o a otros residentes.\n\n
         Se debe evitar hacer ruido sobre los pisos con acciones como el taconeo, saltos, descargas o deslizamientos de objetos, recordando que "el piso de mi apartamento, es el techo de mi vecino". Asi mismo, se debe evitar los escandalos, gritos, televisores o radios en alto volumen, especialmente en la madrugada o altas horas de la noche.
     </string>
     <string name="box_suggeston">Caja de Sugerencias</string>
     <string name="resume_asamble_2022">Resumen Asamblea 2022</string>
     <string name="info_coeficiente">Coeficiente Participación\n\n¿Que es el coeficiente?\n Corresponde al área privada de cada bien de dominio particular, estos son calculados por el grupo constructor y plasmado en el REGLAMENTO DE PROPIEDAD HORIZONTAL.\n\n ¿Cual es el deber ser?\n Se debe facturar según la última reforma de REGLAMENTO DE PROPIEDAD HORIZONTAL - ESCRITURA 3018 DEL 30 DICIEMBRE DE 2003</string>
-    <string name="info_presupuesto">Presupuesto 2022\n\nAprobado el presupuesto para el año 2022 con un incremento del 10.07%, retroactivo a enero de 2022.\n\nEste aplicará del siguiente modo:\nComo en enero de 2022 se ajusto el presupuesto con el IPC solo se factura la diferencia, es decir, 10.07 - 5.62 = 4.45% este sería el ajuste retroactivo a enero de 2022\nEl retroactivo se facturará en el mes de abril, mayo y junio 2022.</string>
-    <string name="info_cuota_extraordinaria">Cuota Extraordinaria\n\nAprobada cuota extraordinaria por un valor de $333\'759.536, diferido a 6 cuotas según el coeficiente de partifipación de cada bien privado, para la puesta a punto y reforma de ascensores buscando la certificacion de transporte vertical NTC 5926-1\n\nEl monto aprobado es dividido por los 780 bienes privados según el coeficiente de participación.\nSerá diferido a 6 cuotas que se cobran entre el mes de abril y septiembre del año 2022.</string>
+    <string name="info_presupuesto">Presupuesto 2022\n\nAprobado el presupuesto para el año 2022 con un incremento del 10.07%, retroactivo a enero de 2022.\n\nEste aplicará del siguiente modo:\nComo en enero de 2022 se ajusto el presupuesto con el IPC solo se factura la diferencia, es decir, \n10.07 - 5.62 = 4.45%\n este sería el ajuste retroactivo a enero de 2022\nEl retroactivo se facturará en el mes de abril, mayo y junio 2022.</string>
+    <string name="info_cuota_extraordinaria">Cuota Extraordinaria\n\nAprobada cuota extraordinaria por un valor de $333\'759.536, diferido a 6 cuotas según el coeficiente de participación de cada bien privado, para la puesta a punto y reforma de ascensores buscando la certificación de transporte vertical NTC 5926-1\n\nEl monto aprobado es dividido por los 780 bienes privados según el coeficiente de participación.\nSerá diferido a 6 cuotas que se cobran entre el mes de abril y septiembre del año 2022.</string>
     <string name="info_concejo_2022">Consejo de Administración\n\nPrincipal: Maria Cano - Suplente: María Gomez\nPrincipal: Rebeca Roa - Suplente: Silvia Ruíz\nPrincipal: Julieth Gomez - Suplente: Margarita Quiroz\nPrincipal: Yanneth Correa - Suplente: Elianan Acosta\nPrincipal: Guillermo Londoño - Suplente: Claudia Ramirez</string>
     <string name="info_comite_convivencia">Comite de Convivencia\n\nMaria Amparo\nElla será apoyada y complementada por el concejo de administración.</string>
     <string name="representante_legal">Representante Legal: Julio Cesar Loaiza</string>
