--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="menu_playground">Zona de Juegos</string>
     <string name="menu_noise">Normatividad Ruido</string>
     <string name="menu_box_suggestion">Caja de Sugerencias</string>
+    <string name="menu_schedule">Horario Atrención</string>
+    <string name="menu_home">Principal</string>
     <string name="emails">Correos Electrónicos</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="contact_phones">Telefonos de Contacto</string>
