--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,22 @@
     <string name="note">Nota</string>
     <string name="whatsap">Whatsapp</string>
     <string name="email_greeting">Buenos Dias</string>
+    <string name="pqr_general_title">PQR Generales</string>
+    <string name="pqr_billing_title">PQR Facturación</string>
+    <string name="doc_files_title">Documentos</string>
     <string name="url_website">https://direcciontorressan.wixsite.com/my-site</string>
+    <string name="there_arent_any_documents_to_show">No hay documentos para mostrar</string>
+    <string name="download_file_name">Descargando %s</string>
+    <string name="create_date">Fecha Creación Archivo: </string>
+    <string name="version_file">Versión del Archivo: </string>
+    <string name="file_type">Tipo de Archivo: </string>
+    <string name="name_file">Nombre Archivo: </string>
+    <string name="description_file">Descripción:</string>
+    <string name="description_folder_documents">
+        En este espacion podra encontrar la información relacionadas a los documentos y otros anexos sobre el manejo de la unidad residencial torres de san sebastian
+
+    </string>
+    <string name="no_network_connection">Esta funcionalidad solo funciona con acceso a internet, conectese a una red de WiFi o activa los datos en el mobile</string>
     <string name="parking_information">
         <![CDATA[
         <p>
@@ -287,5 +302,7 @@ permisos respectivos.
     <string name="representante_legal">Representante Legal: Julio Cesar Loaiza</string>
     <string name="contadora_publica">Contadora Pública: Carmen Noreña</string>
     <string name="revisor_fiscal">Revisor Fiscal: Claudia Martha Niño</string>
-    <string name="team">Equipo de Trabajo 2022</string>
+    <string name="team">Equipo de Trabajo 2024</string>
+    <string name="pqrs_billing">PQRs Facturación</string>
+    <string name="pqrs_general">PQRs Generales</string>
 </resources>
