--- a/urtss-android-core/src/main/res/values/strings.xml
+++ b/urtss-android-core/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="url_pqr_billing">https://www.google.com/</string>
     <string name="url_pqr_general">https://www.bing.com/</string>
+    <string name="url_suggestion_box">https://www.google.com</string>
 </resources>
