--- a/urtss-android-core/src/main/res/values/strings.xml
+++ b/urtss-android-core/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="url_pqr_billing">https://www.google.com/</string>
     <string name="url_pqr_general">https://www.bing.com/</string>
     <string name="url_suggestion_box">https://www.google.com</string>
+    <string name="url_faq_ai">https://www.google.com.co/search?q=torres+san+sebastian</string>
 </resources>
